# solaris-xorg

./: .hgignore  .hgtags  BUILD_INSTRUCTIONS  Makefile  README.md  buildit  download-tarballs  make_release_packages  newPkRev
XORG_NV/: build_src_tree  buildit  make_release_packages  newPkRev  other_masters
exception_lists/: cdm  check_rtime  copyright  packaging  permchk
open-src/: Makefile  README
open-src/app/: Makefile  Makefile.inc
open-src/app/winsysck/sun-src/: COPYING  Makefile  Makefile.am  Makefile.in  configure  configure.ac  main.c  winsysck.man
open-src/common/: Makefile.defs  Makefile.inc  Makefile.init  Makefile.options.opensolaris  Makefile.options.oracle.com  Makefile.options.sun.com  Makefile.subdirs  X-parfait.conf  delibtoolize.pl  install-sh  pkg-manifest-generate.pl  set-elf-comments.pl  sunman-stability  suntouch-manpages.pl  table-prepend
open-src/data/: Makefile  Makefile.inc
open-src/doc/: Makefile  Makefile.inc
open-src/driver/: Makefile  Makefile.inc
open-src/font/: Makefile  Makefile.bdf  Makefile.inc  X11-font-license-add.txt  X11-font-license.txt  merge-fonts.scale.pl
open-src/kernel/: Makefile  Makefile.inc  Makefile.init  Makefile.rules
open-src/lib/: Makefile  Makefile.inc
open-src/proto/: Makefile  Makefile.inc
open-src/tarballs/: lg3dproto-5.0.tar.bz2  libXlg3d-5.0.tar.bz2
open-src/util/: Makefile  Makefile.inc
open-src/xserver/: Makefile  Makefile.inc
pkg/: Makefile  Makefile.buildnum  X-all.p5m  X-consolidation.mf  X-incorporation.mf  X-incorporation.p5m  X-redistributable.mf  X-redistributable.p5m  exceptions-validate_pkg.p5m  generate-history.awk  generate_font_metadata.pl  merge-metadata.pl  postpub-pkglintrc  prepub-pkglintrc
pkg/legacy/: FSWxorg-fonts-core.mf  FSWxorg-fonts-core.p5m  FSWxorg-fonts-cyrillic.mf  FSWxorg-fonts-cyrillic.p5m  FSWxorg-fonts-daewoo.p5m  FSWxorg-fonts-ethiopic.mf  FSWxorg-fonts-ethiopic.p5m  FSWxorg-fonts-iso8859-10.mf  FSWxorg-fonts-iso8859-10.p5m  FSWxorg-fonts-iso8859-13.mf  FSWxorg-fonts-iso8859-13.p5m  FSWxorg-fonts-iso8859-14.mf  FSWxorg-fonts-iso8859-14.p5m  FSWxorg-fonts-iso8859-16.mf  FSWxorg-fonts-iso8859-16.p5m  FSWxorg-fonts-iso8859-2.p5m  FSWxorg-fonts-iso8859-3.mf  FSWxorg-fonts-iso8859-3.p5m  FSWxorg-fonts-iso8859-4.mf  FSWxorg-fonts-iso8859-4.p5m  FSWxorg-fonts-iso8859-9.p5m  FSWxorg-fonts-jiskan.p5m  FSWxorg-fonts-syriac.p5m  FSWxorg-fonts-vera.mf  FSWxorg-fonts-vera.p5m  FSWxorg-fonts.p5m  SUNWastfbcf.p5m  SUNWdrmr.p5m  SUNWefbcf.p5m  SUNWefbw.p5m  SUNWfbc.p5m  SUNWfont-daewoo-misc.p5m  SUNWfont-isas-misc.mf  SUNWfont-isas-misc.p5m  SUNWfont-jis-misc.mf  SUNWfont-jis-misc.p5m  SUNWfont-misc-ethiopic.p5m  SUNWfont-misc-meltho.p5m  SUNWfont-xorg-core.p5m  SUNWfont-xorg-cyrillic.p5m  (+161 more)
(+2582 files in other folders)
